[package]
name = "kms-sys"
build = "build.rs"
links = "kms"
version = "0.0.1"
edition = "2021"
categories = ["external-ffi-bindings"]

[lib]
path = "bindings.rs"

[lints.rust]
non_upper_case_globals = "allow"
non_snake_case = "allow"
non_camel_case_types = "allow"


[build-dependencies]
cc = "1.1.37"

[features]
default = ["use-auxv"]
use-auxv = []
openssl = []                                  # Not recommended
openssl-no-hmac = ["openssl"]                 # Not recommended
openssl-aes = ["openssl"]                     # Not recommended
openssl-software = ["openssl", "openssl-aes"] # Not recommended
polarssl = []                                 # Not recommended
